parse-display-tests/tests/compile_fail/display/invalid_with_struct.rs
use parse_display::Display;

#[derive(Display)]
struct X {
    #[display(with = unknown)]
    a: u32,
}

fn main() {}
